@@ -301,6 +301,7 @@ CONFIG_APP_DIR=examples/nsh
 CONFIG_DEBUG=n
 CONFIG_DEBUG_VERBOSE=n
 CONFIG_DEBUG_SYMBOLS=n
+CONFIG_DEBUG_PAGING=n
 CONFIG_MM_REGIONS=1
 CONFIG_ARCH_LOWPUTC=y
 CONFIG_RR_INTERVAL=200
@@ -407,12 +408,12 @@ CONFIG_SIG_SIGWORK=4
 #
 CONFIG_PAGING=y
 CONFIG_PAGING_PAGESIZE=1024
-CONFIG_PAGING_NLOCKED=36
+CONFIG_PAGING_NLOCKED=48
 #CONFIG_PAGING_LOCKED_PBASE
 #CONFIG_PAGING_LOCKED_VBASE
 CONFIG_PAGING_NPPAGED=96
 CONFIG_PAGING_NVPAGED=384
-CONFIG_PAGING_NDATA=44
+CONFIG_PAGING_NDATA=32
 #CONFIG_PAGING_DEFPRIO
 CONFIG_PAGING_STACKSIZE=2048
 CONFIG_PAGING_BLOCKINGFILL=y
