@@ -160,6 +160,7 @@ static void pg_callback(FAR _TCB *tcb, int result)
 {
   /* Verify that g_pftcb is non-NULL */
 
+  pgllvdbg("g_pftcb: %p\n", g_pftcb);
   if (g_pftcb)
     {
       FAR _TCB *htcb = (FAR _TCB *)g_waitingforfill.head;
@@ -185,6 +186,8 @@ static void pg_callback(FAR _TCB *tcb, int result)
 
         if (priority > wtcb->sched_priority)
           {
+            pgllvdbg("New worker priority. %d->%d\n",
+                     wtcb->sched_priority, priority);
             sched_setpriority(wtcb, priority);
           }
 
@@ -197,9 +200,10 @@ static void pg_callback(FAR _TCB *tcb, int result)
         g_fillresult = result;
     }
 
- /* Signal the page fill worker thread (in any event) */
+  /* Signal the page fill worker thread (in any event) */
  
- kill(g_pgworker, SIGWORK);
+  pglldbg("Signaling worker. PID: %d\n", g_pgworker);
+  kill(g_pgworker, SIGWORK);
 }
 #endif
 
@@ -246,6 +250,7 @@ static inline bool pg_dequeue(void)
       /* Remove the TCB from the head of the list (if any) */
 
       g_pftcb = (FAR _TCB *)dq_remfirst((dq_queue_t*)&g_waitingforfill);
+      pgllvdbg("g_pftcb: %p\n", g_pftcb);
       if (g_pftcb != NULL)
         {
           /* Call the architecture-specific function up_checkmapping() to see if
@@ -291,6 +296,8 @@ static inline bool pg_dequeue(void)
 
                    /* Reduce the priority of the page fill worker thread */
 
+                   pgllvdbg("New worker priority. %d->%d\n",
+                            wtcb->sched_priority, priority);
                    sched_setpriority(wtcb, priority);
                  }
 
@@ -305,6 +312,7 @@ static inline bool pg_dequeue(void)
            * virtual address space -- just restart it.
            */
 
+          pglldbg("Restarting TCB: %p\n", g_pftcb);
           up_unblock_task(g_pftcb);
         }
     }
@@ -360,6 +368,7 @@ static inline bool pg_startfill(void)
        * a page in-use, un-map it, and make it available.
        */
 
+      pgllvdbg("Call up_allocpage(%p)\n", g_pftcb);
       result = up_allocpage(g_pftcb, &vpage);
       DEBUGASSERT(result == OK);
 
@@ -376,6 +385,7 @@ static inline bool pg_startfill(void)
        * status of the fill will be provided by return value from up_fillpage().
        */
 
+      pgllvdbg("Call up_fillpage(%p)\n", g_pftcb);
       result = up_fillpage(g_pftcb, vpage);
       DEBUGASSERT(result == OK);
 #else
@@ -388,6 +398,7 @@ static inline bool pg_startfill(void)
        * This callback will probably from interrupt level.
        */
 
+      pgllvdbg("Call up_fillpage(%p)\n", g_pftcb);
       result = up_fillpage(g_pftcb, vpage, pg_callback);
       DEBUGASSERT(result == OK);
       
@@ -412,6 +423,8 @@ static inline bool pg_startfill(void)
 #endif /* CONFIG_PAGING_BLOCKINGFILL */
       return true;
     }
+
+  pglldbg("Queue empty\n");
   return false;
 }
 
@@ -443,6 +456,8 @@ static inline void pg_alldone(void)
 {
   FAR _TCB *wtcb = (FAR _TCB *)g_readytorun.head;
   g_pftcb = NULL;
+  pgllvdbg("New worker priority. %d->%d\n",
+           wtcb->sched_priority, CONFIG_PAGING_DEFPRIO);
   sched_setpriority(wtcb, CONFIG_PAGING_DEFPRIO);
 }
 
@@ -477,6 +492,7 @@ static inline void pg_fillcomplete(void)
    * received the fill ready-to-run.
    */
 
+  pglldbg("Restarting TCB: %p\n", g_pftcb);
   up_unblock_task(g_pftcb);
 }
 
@@ -520,6 +536,7 @@ int pg_worker(int argc, char *argv[])
    * fill completions should occur while this thread sleeps.
    */
 
+  pglldbg("Started\n");
   flags = irqsave();
   for (;;)
     {
@@ -567,6 +584,7 @@ int pg_worker(int argc, char *argv[])
                * task that was blocked waiting for this page fill.
                */
 
+              pglldbg("Restarting TCB: %p\n", g_pftcb);
               up_unblock_task(g_pftcb);;
 
               /* Yes .. Start the next asynchronous fill.  Check the return
@@ -574,6 +592,7 @@ int pg_worker(int argc, char *argv[])
                * no fill was started).
                */
 
+              pgllvdbg("Calling pg_startfill\n");
               if (!pg_startfill())
                 {
                   /* No fill was started.  This can mean only that all queued
@@ -581,6 +600,7 @@ int pg_worker(int argc, char *argv[])
                    * nothing more to do.
                    */
 
+                  pgllvdbg("Call pg_alldone()\n");
                   pg_alldone();
                 }
             }
@@ -592,7 +612,7 @@ int pg_worker(int argc, char *argv[])
 #ifdef CONFIG_PAGING_TIMEOUT_TICKS
           else
             {
-              dbg("Timeout!\n");
+              lldbg("Timeout!\n");
               ASSERT(g_system_timer - g_starttime < CONFIG_PAGING_TIMEOUT_TICKS);
             }
 #endif
@@ -610,6 +630,7 @@ int pg_worker(int argc, char *argv[])
            * g_pftcb).
            */
 
+           pgllvdbg("Calling pg_startfill\n");
            (void)pg_startfill();
         }
 #else
@@ -624,6 +645,7 @@ int pg_worker(int argc, char *argv[])
            * (false means that no fill was perforemd).
            */
 
+          pgllvdbg("Calling pg_startfill\n");
           if (!pg_startfill())
             {
                /* Break out of the loop -- there is nothing more to do */
@@ -638,11 +660,13 @@ int pg_worker(int argc, char *argv[])
            * returns true.
            */
 
+          pgllvdbg("Restarting TCB: %p\n", g_pftcb);
           up_unblock_task(g_pftcb);;
         }
 
       /* All queued fills have been processed */
 
+      pgllvdbg("Call pg_alldone()\n");
       pg_alldone();
 #endif
     }
